# schwifty-cli

./: .envrc  .gitignore  Dockerfile  Makefile  README.md  devenv.nix  pyproject.toml  requirements.txt  schwifty.spec
.github/workflows/: main.yml  release.yml
schwifty-cli/: __main__.py
