[tool.poetry]
name = "schwifty-cli"
version = "0.1.0"
description = "Schwifty CLI"
authors = ["Tom Kirkpatrick <tom@strike.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
schwifty = "^2024.1.1.post0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
